# cab-sharing-portal

./: .gitignore  .lintstagedrc.js  README.md  env.example  jsconfig.json  next.config.js  package-lock.json  package.json  tailwind.config.js
.husky/: pre-commit  py_pre_commit.sh
backend/: .gitignore  README.md  auth.py  dump.sql  env.example  init.sql  logging.yml  main.py  pyproject.toml  schemas.py  setup.cfg  utils.py
backend/db/: schemas.py
backend/sql/: cabBooking.sql  deleteBooking.sql  details.sql  joinBooking.sql  location.sql  signUp.sql
backend/templates/accept/: body.html  subject.txt
backend/templates/accept_notif/: body.html  subject.txt
backend/templates/create/: body.html  subject.txt
backend/templates/delete_notif/: body.html  subject.txt
backend/templates/exit/: body.html  subject.txt
backend/templates/exit_notif/: body.html  subject.txt
backend/templates/reject/: body.html  subject.txt
backend/templates/request/: body.html  subject.txt
public/: manifest.json
src/components/: AllUserCardExpanded.jsx  CabShareSmall.jsx  UserCardExpanded.jsx
src/components/allUsersSpecific/: AllUserBookings.jsx  AllUserCardExpanded.jsx
src/components/commonForAll/: CabShareSmall.jsx  CabSharing.jsx  Login.jsx  Logout.jsx  NavBar.jsx  ReportBug.jsx  TravellerCard.jsx  UserGuide.jsx  UserbookingShimmer.jsx
src/components/modals/: ConfirmModal.jsx  ConformModal.jsx  OverlappingModal.jsx  PhoneNumberModal.jsx  (+2 more)
src/pages/: _app.jsx  all-user-bookings.jsx  cab-sharing.jsx  home.jsx  index.jsx  landing.jsx
src/styles/: globals.css
(+24 files in other folders)
